# vagrant_and_cpp

./: README.md  Vagrantfile  bootstrap.sh  build.sh  clean.sh
cpp-cross-platform/: CMakeLists.txt  conanfile.txt
cpp-cross-platform/src/app/: CMakeLists.txt
cpp-cross-platform/src/bool_pitfall/: CMakeLists.txt  bool_pitfall.cpp
cpp-cross-platform/src/dynamic_library/: CMakeLists.txt
cpp-cross-platform/src/dynamic_library2/: math.cpp  math.h
cpp-cross-platform/src/null_ptr/: CMakeLists.txt
cpp-cross-platform/src/quiz/: CMakeLists.txt
cpp-cross-platform/src/range_based_loops/: range_based_loops.cpp
cpp-cross-platform/src/scoped_enums/: CMakeLists.txt
cpp-cross-platform/src/static_library/: utilities.h
cpp-cross-platform/src/trailing_return_types/: CMakeLists.txt  trailing_return_types.cpp
cpp-crossplatform/: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh
cpp-crossplatform/src/: CMakeLists.txt
cpp-crossplatform/src/app/: test_cpp.cpp
cpp-crossplatform/src/auto_decltype/: CMakeLists.txt  auto_decltype.cpp
cpp-crossplatform/src/dynamic_library/: singleton_container.cpp  singleton_container.h
cpp-crossplatform/src/dynamic_library2/: CMakeLists.txt
cpp-crossplatform/src/null_ptr/: null_ptr.cpp
cpp-crossplatform/src/observer/: CMakeLists.txt  Observer.cpp
cpp-crossplatform/src/quiz/: quiz.cpp
cpp-crossplatform/src/range_based_loops/: CMakeLists.txt
cpp-crossplatform/src/scoped_enums/: scoped_enums.cpp
cpp-crossplatform/src/static_library/: CMakeLists.txt  enums.h  utilities.cpp
cpp-crossplatform/src/uniform_initialization/: CMakeLists.txt  uniform_initialization.cpp
